--- a/nest/nest-task/package.json
+++ b/nest/nest-task/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^7.1.4",
     "@types/passport": "^1.0.4",
     "bcrypt": "^5.0.0",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "config": "^3.3.2",
