--- a/nest/nest-task/package.json
+++ b/nest/nest-task/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.1.4",
     "@types/passport": "^1.0.4",
     "bcrypt": "^5.0.0",
@@ -34,6 +35,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "compression": "^1.7.4",
     "config": "^3.3.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
