--- a/nest/nest-task/package.json
+++ b/nest/nest-task/package.json
@@ -37,6 +37,9 @@
     "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "config": "^3.3.2",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^4.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.1",
