--- a/nest/nest-starter/package.json
+++ b/nest/nest-starter/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "config": "^3.3.2",
+    "hbs": "^4.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.0",
