--- a/nest/nest-starter/package.json
+++ b/nest/nest-starter/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.1",
+    "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.4.4",
     "bcrypt": "^5.0.0",
