--- a/nest/nest-task/package.json
+++ b/nest/nest-task/package.json
@@ -42,6 +42,7 @@
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
     "multer": "^1.4.2",
+    "nest-access-control": "^2.0.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.4.1",
